--- a/index.html
+++ b/index.html
@@ -9,4 +9,14 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html,body{
+      height: 100%;
+    }
+  </style>
 </html>
