图标，价格样式修改

--- a/index.html
+++ b/index.html
@@ -20,4 +20,4 @@
     }
   </style>
 </html>
-<script type="text/javascript" src="http://z1-pcok6.kuaishangkf.com/bs/ks.j?cI=144065&fI=152223" charset="utf-8"></script>
+<!-- <script type="text/javascript" src="http://z1-pcok6.kuaishangkf.com/bs/ks.j?cI=144065&fI=152223" charset="utf-8"></script> -->
